# overseer-in-the-loop

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  Procfile  README.md  mise.local.toml.example  pyproject.toml
src/: __init__.py
src/core/: __init__.py  conversation.py  protocol.py  render.py
src/guardrails/: __init__.py  classifier.py  middleware.py  prompts.py  rules.py
src/loop/: __init__.py  agent.py  hitl.py  prompts.py  react_steps.py  service.py
src/redteam/: __init__.py  __main__.py  attacks.py  harness.py  models.py  service.py
src/server/: __init__.py  app.py  hitl_bridge.py  router.py
src/tools/: __init__.py  edit.py  tool_registry.py
tests/: test_smoke.py
tests/core/: __init__.py  test_conversation.py
tests/guardrails/: __init__.py  conftest.py  test_classifier.py  test_evil_toggle.py  test_middleware.py  test_rules.py
tests/loop/: __init__.py  conftest.py  test_hitl.py  test_llm_error_translation.py  test_otel.py  test_service_steps.py  test_subscription_cleanup.py  test_workspace_root.py
tests/redteam/: __init__.py  conftest.py  test_attacks.py  test_harness.py  test_harness_live.py  test_rules_tier.py  test_service.py
tests/server/: __init__.py  conftest.py  test_router.py
tests/tools/: __init__.py  conftest.py  test_edit.py  test_tool_registry.py
ui/: CLAUDE.md  biome.json  next.config.ts  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/redteam/: page.tsx
ui/components/agent-loop/: AgentLoopPanel.tsx  AgentResponseMarkdown.tsx  agent-loop-parts.tsx  step-utils.ts
ui/components/redteam/: RedTeamPanel.tsx
ui/components/tool-panel/: ToolPanel.tsx
ui/lib/: types.ts  ws-client.ts
