[project]
name = "agent-auto-mode"
version = "0.1.0"
description = "Code-first agent auto mode with NVIDIA's open-source agent stack"
requires-python = ">=3.14"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
nat = [
    "nvidia-nat>=1.7.0",
    "nvidia-nat-langchain>=1.7.0",
    "nvidia-nat-opentelemetry>=1.7.0",
    "nemoguardrails>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN", "SLF001"]
"src/tools/tool_registry.py" = [
    "ANN401",   # Any in wrapper args — wrapping arbitrary LangChain tools
    "ASYNC240", # pathlib in async — workspace validation is CPU-bound, not I/O
]
"src/guardrails/middleware.py" = [
    "ANN401",  # Any in middleware wrapper — wrapping arbitrary tool calls
    "PLC0415", # deferred build_rails import — defers heavy NeMo init
]
"src/server/app.py" = ["PLC0415"]      # deferred imports inside lifespan
"src/server/router.py" = ["PLC0415"]   # deferred run_agent import inside handler

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "nat.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "nemoguardrails.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
